cambios generales de maquetado

--- a/sass/colores/_colores.scss
+++ b/sass/colores/_colores.scss
@@ -1,11 +1,11 @@
-$deep-blue : #335AA4;
-$mid-blue: #335AA4;
-$light-blue: #3359A0;
+$deep-blue : #000;
+$mid-blue: #000;
+$light-blue: #333331;
 $white:#FFFFFF;
-$light-gray: #F0F1F3;
-$mid-gray:#C9C9C9;
+$light-gray: #f0f1f3;
+$mid-gray:#dbdbdb;
 $deep-gray: #707070;
-$light-yellow: #F3BA40;
-$mid-yellow: #EACA77;
-$deep-yellow: #E4B73F;
+$light-yellow: #EB0000;
+$mid-yellow: #cd3439;
+$deep-yellow: #df1931;
 
