--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -63,7 +63,7 @@
                 border-radius: 10px;
                 font-size: 22px;
                 font-weight: 900;
-                color: $light-blue;
+                color: $white;
                 background-color: $light-yellow;
                 &:hover{
                     background-color: $mid-yellow;
