--- a/sass/config/_config.scss
+++ b/sass/config/_config.scss
@@ -5,11 +5,8 @@ img{
     height: 100%;
 }
 h1,h2,h3,p,a{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Kanit', sans-serif;
 }
 body{
-    background-color: $white;
+    background-color: $light-blue;
 }
-/* main{
-    min-height: calc(100vh - 268px);
-} */
