--- a/sass/components/_cardsCarrousel.scss
+++ b/sass/components/_cardsCarrousel.scss
@@ -7,61 +7,45 @@
     display: flex;
     justify-content: space-between;
     &-item{
-        width: 33%;
+        width: 50%;
         max-width: 408px;
-        height: 234px;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        border: 2px solid #243A7F;
         border-radius: 10px;
         text-decoration: none;
+        border: 1px solid $deep-yellow;
 
         &-info{
+            width: 50%;
             text-align: center;
             margin-top: 23px;
-            font-size: 40px;
-            color: $deep-blue;
+            font-size: 25px;
+            color: $white;
             font-weight: 900;
-            height: 40px;
+            padding: 1rem;
+            &-icon{
+              margin: 0 auto;
+              max-width: 50% !important;
+              height: auto;
+              
+            }
         }
 
         &-img{
-            width: 100%;
+            width: 50%;
             display: flex;
-            justify-content: center;
+            justify-content: end;
             & img{
                 width: 100%;
             }
         }
         &:nth-child(1){
-            background-image: url(../../img/home/sports-Bckgr.jpg);
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            & img{
-                max-width: 194px;
-            }
-
+            background-image: url(../../img/products/sports.jpg);
         }
         &:nth-child(2){
-            background-image: url(../../img/home/casino-Bckgr.jpg);
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            & img{
-                max-width: 296px;
-            }
+            background-image: url(../../img/products/casino.jpg);
         }
         &:nth-child(3){
-            background-image: url(../../img/home/horses-Bckgr.jpg);
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            & img{
-                max-width: 365px;
-            }
-        
+            background-image: url(../../img/products/horses.jpg);
         }
     }
 }
@@ -77,23 +61,10 @@
 }
 .cards-wrapper {
     display: flex;
+    justify-content: center;
     gap: 15px;
     width: 100%;
     max-width: 800px;
-
-    .cardsContainer-item{
-      width: 50%;
-    }
-    .sports{
-      & img{
-        max-width: 194px;
-      }
-    }
-    .race{
-      & img{
-        max-width: 365px;
-      }
-    }
   }
   .card img {
     max-width: 100%;
@@ -137,8 +108,11 @@
     right: 35%;
   }
   .carrousel-cell .carousel-control-next-icon,.carrousel-cell .carousel-control-prev-icon{
-    filter: hue-rotate(90deg) brightness(0%);
+    filter: hue-rotate(90deg) brightness(100%);
   }
   .carousel-inner{
     z-index: 100;
+  }
+  .racebook{
+    max-width: 30% !important;
   }
