--- a/sass/components/_carrousel.scss
+++ b/sass/components/_carrousel.scss
@@ -2,75 +2,16 @@
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: bottom;
     text-decoration: none;
-    &:nth-child(1){
-        & .carrousel-main img{
-            @media screen and (min-width: 900px){
-                width: 100%;
-                max-width: 463px;
-            }
+    & .carrousel-main img{
+        @media screen and (min-width: 900px){
+            width: 100%;
         }
-    }
-    &:nth-child(2){
-        & .carrousel-main img{
-            @media screen and (min-width: 900px){
-                width: 100%;
-                max-width: 661px;
-            }
-        }
-    }
-    &:nth-child(3){
-        & .carrousel-main img{
-            @media screen and (min-width: 900px){
-                width: 100%;
-                max-width: 610px;
-            }
-        }
-        
     }
 }
 .carriusel-item-container{
-    &:nth-child(1){
-        background-image: url(../../img/home/slider_sports-imgs.jpg);
-    }
-    &:nth-child(2){
-        background-image: url(../../img/home/slider_horses-imgs.jpg);
-        & h2{
-            font-size: 32px;
-            margin-top: 65px;
-            font-weight: 900;
-            color: $light-blue;
-        }
-        @media screen and (min-width: 900px){
-            & h2{
-                margin-top: 0px;
-                font-size: 75px;
-                text-align: left;
-            }
-        }
-        
-    }
-    &:nth-child(3){
-        background-image: url(../../img/home/slider_casino-imgs.jpg);
-        & h2{
-            font-size: 32px;
-            margin-top: 60px;
-            font-weight: 900;
-        }
-        @media screen and (min-width: 350px){
-            & h2{
-                margin-top: 60px;
-            }
-        }
-        @media screen and (min-width: 900px){
-            & h2{
-                margin-top: 0px;
-                font-size: 75px;
-                text-align: left;
-            }
-        }
-    }
+    background-image: url(../../img/slider.jpg);
 }
 .carrousel-main{
     height: 375px;
@@ -92,8 +33,11 @@
         margin-right: 41px;
         & h2{
             font-size: 32px;
+            color: $white;
             font-weight: 900;
-            color: $light-yellow;
+            & span{
+                font-weight: 100;
+            }
         }
         @media screen and (min-width: 900px){
             width: 50%;
@@ -101,20 +45,19 @@
             justify-content: center;
 
             & h2{
-                font-size: 75px;
+                font-size: 70px;
                 text-align: left;
+
             }
         }
     }
     &-containerImg{
+        width: 50%;
         @media screen and (min-width: 900px){
-            width: 50%;
-            
+            height: auto;
+            display: flex;
+            justify-content: center;
         }
-        & img{
-            width: 263px;
-        }
-        
     }
 }
 
