--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -27,57 +27,53 @@
             height: 27px;
 
             @media screen and (min-width: 900px){
-                width: 177px;
+                width: 25%;
                 height: 50px;
             }
         }
 
         &-options{
-            width: calc(70% - 82px);
+            width: 55%;
 
             ul{
                 list-style: none;
                 display: flex;
                 align-items:center;
+                justify-content: center;
                 gap: 42px;
-                width: 96%;
                 margin: 0;
-                padding-left: 82px;
             }
 
             ul li a{
-                color: $light-yellow;
+                color: $white;
                 text-decoration: none;
                 font-size: 16px;
-                font-weight: 900;
             }
         }
         &-buttonContainer{
             width: 50%;
             display: flex;
             align-items: center;
-            justify-content: flex-end;
+            justify-content: right;
             @media screen and (min-width: 900px){
-                width: 10%;
+                width: 20%;
                 justify-content: start;
             }
             &-button{
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                padding: 0;
+                padding: 0.5rem;
                 margin: 0;
-                width: 68px;
-                height: 25px;
                 text-decoration: none;
                 background-color: $light-yellow;
                 font-size: 11px;
-                font-weight: 900;
-                color: $deep-blue;
+                font-weight: bold;
+                color: $white;
+                border-radius: 5px;
                 @media screen and (min-width: 900px){
-                    width: 114px;
-                    height: 42px;
-                    font-size: 18px;
+                    padding: 0.2rem 1rem;
+                    font-size: 16px;
                 }
 
                 &:hover{
