--- a/sass/components/_privacy.scss
+++ b/sass/components/_privacy.scss
@@ -1,6 +1,6 @@
 .privacy{
     padding: 3rem 0;
-    background-color: $light-gray;
+    background-color: $light-blue;
     min-height: 73vh;
     max-width: 1280px;
     width: 90%;
@@ -11,16 +11,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    color: $deep-blue;
+    color: $white;
     h2{
         text-align: center;
         font-weight: bold;
     }
     p{
         margin: 10px;
-        background-color: white;
         padding: 15px;
-        border: 1px solid white;
         border-radius: 10px;
         text-align: center;
     }
