--- a/sass/components/_carrousel.scss
+++ b/sass/components/_carrousel.scss
@@ -14,14 +14,13 @@
     background-image: url(../../img/slider.jpg);
 }
 .carrousel-main{
-    height: 375px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     @media screen and (min-width: 900px){
         max-width: 1400px;
-        height: 440px;
         flex-direction: row;
         justify-content: center;
         margin: 0 auto;
