--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -1,83 +1,24 @@
-.login-container{
-    margin: 0 auto;
-    width: calc(100% - 30px);
-    max-width: 1275px;
-    display: flex;
+.form-login{
     justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 100px;
-    @media screen and (min-width:1024px) {
-        margin-top: 100px;
-        margin-bottom: 200px;
-    }
-    &-form{
-        width: 100%;
-        max-width: 342px;
-        border: 1px;
-        border-radius: 10px 10px 10px 10px;
-        background-color: $deep-blue;
-        padding: 15px;
-        margin-left: 10px;
-        margin-right: 10px;
-        @media screen and (min-width:992px) {
-            margin: 0;
-            width: 50%;
-            max-width: 100%;
-            border-radius: 10px 0px 0px 10px;
-        }
-        h2{
-            width: 100%;
-            margin-top: 46px;
-            color: $light-yellow;
-            text-align: center;
-        }
-        .signUp{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            
-        }
-        .signUp__form{
-            width: 100%;
-            max-width: 402px;
-            height: 307px;
-            display: flex;
-            margin-top: 0px;
-            flex-direction: column;
-            justify-content: space-between;
-            @media screen and (min-width:992px) {
-                height: 350px;
-                margin-top: 20px;
-            }
-            &--label{
-                color: $white;
-            }
-            &--input{
-                height: 55px;
-                border: 1px solid;
-                border-radius: 5px;
-            }
-            & .btn-login{
-                height: 46px;
-                border: 1px;
-                border-radius: 10px;
-                font-size: 22px;
-                font-weight: 900;
-                color: $white;
-                background-color: $light-yellow;
-                &:hover{
-                    background-color: $mid-yellow;
-                }
-            }
-        }
-    }
-    &-img{
-        width: 50%;
-        border: 1px;
-        border-radius: 0px 10px 10px 0px;
-        img{
-            border: 1px;
-            border-radius: 0px 10px 10px 0px;
-        }
-    }
+    align-items: center;
+    background: #000;
+    padding: 1rem 0;
+    margin: 2rem auto;
+    border-radius: 1rem;
+    max-width: 400px;
+
+}
+.signUp__form{
+    width: 80%;
+    margin: 0 auto;
+}
+.signUp__input{
+    margin-top: 1rem;
+}
+.signUp__button{
+    width: 100%;
+    background-color: $light-yellow;
+    color: $white;
+    font-size: 16px;
+    font-weight: 600;
 }
