--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -674,76 +674,25 @@ body {
     row-gap: 2rem; }
 
 .login-container {
-  margin: 0 auto;
-  width: calc(100% - 30px);
-  max-width: 1275px;
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 100px; }
-  @media screen and (min-width: 1024px) {
-    .login-container {
-      margin-top: 100px;
-      margin-bottom: 200px; } }
-  .login-container-form {
-    width: 100%;
-    max-width: 342px;
-    border: 1px;
-    border-radius: 10px 10px 10px 10px;
-    background-color: #000;
-    padding: 15px;
-    margin-left: 10px;
-    margin-right: 10px; }
-    @media screen and (min-width: 992px) {
-      .login-container-form {
-        margin: 0;
-        width: 50%;
-        max-width: 100%;
-        border-radius: 10px 0px 0px 10px; } }
-    .login-container-form h2 {
-      width: 100%;
-      margin-top: 46px;
-      color: #EB0000;
-      text-align: center; }
-    .login-container-form .signUp {
-      width: 100%;
-      display: flex;
-      justify-content: center; }
-    .login-container-form .signUp__form {
-      width: 100%;
-      max-width: 402px;
-      height: 307px;
-      display: flex;
-      margin-top: 0px;
-      flex-direction: column;
-      justify-content: space-between; }
-      @media screen and (min-width: 992px) {
-        .login-container-form .signUp__form {
-          height: 350px;
-          margin-top: 20px; } }
-      .login-container-form .signUp__form--label {
-        color: #FFFFFF; }
-      .login-container-form .signUp__form--input {
-        height: 55px;
-        border: 1px solid;
-        border-radius: 5px; }
-      .login-container-form .signUp__form .btn-login {
-        height: 46px;
-        border: 1px;
-        border-radius: 10px;
-        font-size: 22px;
-        font-weight: 900;
-        color: #FFFFFF;
-        background-color: #EB0000; }
-        .login-container-form .signUp__form .btn-login:hover {
-          background-color: #cd3439; }
-  .login-container-img {
-    width: 50%;
-    border: 1px;
-    border-radius: 0px 10px 10px 0px; }
-    .login-container-img img {
-      border: 1px;
-      border-radius: 0px 10px 10px 0px; }
+  width: 25%;
+  min-width: 300px;
+  margin: 2rem auto;
+  background-color: #000;
+  padding: 2rem;
+  border-radius: 10px; }
+
+.login-input {
+  margin: 1rem 0;
+  padding: 0.5rem;
+  border-radius: 5px; }
+
+.login-btn {
+  background-color: #EB0000;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  color: #FFFFFF;
+  border-radius: 5px;
+  border: none; }
 
 .house-rules {
   padding: 3rem 0;
@@ -1177,7 +1126,7 @@ footer {
   z-index: 1000;
   width: 100%;
   height: 61px;
-  background-color: #df1931;
+  background-color: #EB0000;
   align-items: center; }
   .footerNav .topMenu-container {
     width: 100%;
