--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -103,7 +103,7 @@ footer{
     z-index: 1000;
     width: 100%;
     height: 61px;
-    background-color: $deep-yellow;
+    background-color: $light-yellow;
     align-items: center;
     .topMenu-container{
         width: 100%;
